# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Id: $

  06 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  modules/catalyst_support.py:
  Added a small patch from Tim Yamin <tim.yamin@zonbu.com> to fix make.conf
  parsing of variables with numbers in them. This is catalyst 2.0.6_pre17 for
  testing.

  06 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-chroot.sh:
  Change back to using sys-apps/baselayout. We'll need to come up with a
  better permanent solution now that virtual/baselayout is no more.

  05 Apr 2008; Andrew Gaffney <agaffney@gentoo.org>
  -livecd/cdtar/grub-memtest86+-cdtar.tar.bz2:
  Update the grub cdtar for grub-0.97-r5 and memtest86+-2.01

  05 Apr 2008; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/bootloader-setup.sh:
  Use menu.lst for grub config, since 0.96 and higher won't use grub.conf
  for eltorito

  04 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org> +TODO,
  modules/generic_stage_target.py, targets/support/livecdfs-update.sh:
  Added TODO. Changed create_handbook_icon call to only be called if
  /docs/handbook/index.html exists on the disk or in livecd/overlay.

  30 Mar 2008; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/kmerge.sh:
  Run sed on KERNELVERSION to escape the slashes so we can use it in another
  sed

  30 Mar 2008; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/kmerge.sh:
  Modify test to run if package.provided exists instead of if it doesn't.
  Run sed on the correct file.

  27 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/support/chroot-functions.sh:
  Added --noreplace to setup_myfeatures merges so we don't blow away any
  packages which are already installed with the proper USE flags for the given
  target. This is for bug #211654. This is catalyst 2.0.6_pre16 for testing.

  27 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/files/README.txt: